# backend-api/routes/uRoutes.js
@@ -1,0 +1,6 @@
+const UsersController = require("../controllers/UsersController")
+
+module.exports = (app) => {
+    app.route("/users")
+    .post(UsersController.create)
+}
